@@ -12,6 +12,12 @@ Minitest.after_parallel_fork do |i|
   print ":child#{i}#{a}"
 end
 
+if ENV['MPF_TEST_CHILD_FAILURE']
+  Minitest.on_parallel_fork_marshal_failure do |i|
+    print ":child-failure#{i}#{a}"
+  end
+end
+
 class MyExceptionClass < StandardError
   attr_reader :something
 end
@@ -35,6 +41,7 @@ end
     end
 
     it "should raise" do
+      exit(1) if ENV['MPF_TEST_CHILD_FAILURE']
       raise
     end
 
